Take copy of Dockerfile from CB